# ClapWorkbench

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.txt
cmake/: Dependencies.cmake
pluginProcess/: CMakeLists.txt
pluginProcess/src/: PluginHost.cpp  PluginHost.h  PluginLibrary.cpp  PluginLibrary.h  PluginManager.cpp  PluginManager.h  Utils.cpp  Utils.h  main.cpp
pluginProcess/src/native/: NativePluginGUI.h  NativePluginGUI_macOS.mm
qml/: ChannelStrip.qml  ChannelStripGUI.qml  Main.qml  TopBar.qml  Utils.js
qml/Components/: Button.qml  ComboBox.qml  Fader.qml  GenericPluginGUI.qml  LightButton.qml  MainMenuWindow.qml  MainMenuWindowItem.qml  MainWindowPluginGUI.qml  MidiFilePlayer.qml  NativePluginGUI.qml  PluginBrowserListItem.qml  PluginBrowserListItemText.qml  PluginBrowserWindow.qml  PluginGUI.qml  PluginSlot.qml  ReorderableListView.qml  Slider.qml
src/: App.cpp  App.h  AudioEngine.cpp  AudioEngine.h  ChannelStrip.cpp  ChannelStrip.h  Commands.cpp  Commands.h  Main.cpp  Node.cpp  Node.h  ParameterModel.cpp  ParameterModel.h  PluginHost.cpp  PluginHost.h  PluginInfo.h  PluginLibrary.cpp  PluginLibrary.h  PluginManager.cpp  PluginManager.h  PluginProcessHost.cpp  PluginProcessHost.h  Utils.cpp  Utils.h
src/Components/: PluginQuickView.cpp  PluginQuickView.h
src/Nodes/: ChannelStrip.cpp  ChannelStrip.h  MidiFilePlayer.cpp  MidiFilePlayer.h  Node.cpp  Node.h  PluginHost.cpp  PluginHost.h
src/Utils/: RecursiveFileSystemWatcher.cpp  RecursiveFileSystemWatcher.h
